--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div id="logoutDiv">
                 <form action="#" th:action="@{/logout}" method="POST">
-                    <button type="submit" class="btn btn-secondary float-right">Logout</button>
+                    <button type="submit" id="logout" class="btn btn-secondary float-right">Logout</button>
                 </form>
             </div>
             <div id="contentDiv" style="clear: right;">
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
-                        <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showNoteModal()">
+                        <button style="margin: 0.25em;" type="button" id="show-note-modal" class="btn btn-info float-right" onclick="showNoteModal()">
                             + Add a New Note
                         </button>
 
@@ -81,7 +81,7 @@
                                             <button type="button" th:onclick="javascript:showNoteModal( [[${note.noteid}]],[[${note.notetitle}]],[[${note.notedescription}]] )" class="btn btn-success">Edit</button>
                                             <a th:href="@{/note/delete(id=${note.noteid})}" class="btn btn-danger">Delete</a>
                                         </td>
-                                        <th scope="row" th:text="${note.notetitle}"></th>
+                                        <th scope="row" class="note-title-row" th:text="${note.notetitle}"></th>
                                         <td th:text="${note.notedescription}"></td>
                                     </tr>
                                 </tbody>
@@ -98,7 +98,7 @@
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        <form action="#" th:action="@{/note}" method="POST">
+                                        <form th:action="@{/note}" method="POST">
                                             <input style="display: none;" type="number" name="noteid" id="note-id">
                                             <div class="form-group">
                                                 <label for="note-title" class="col-form-label">Title</label>
@@ -113,7 +113,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>
+                                        <button type="button" id="saveNoteButton" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>
                                     </div>
                                 </div>
                             </div>
