--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
-                        <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
+                        <button style="margin: 0.25em;" id="show-credentials-modal" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
                             + Add a New Credential
                         </button>
 
@@ -141,7 +141,7 @@
                                         <a th:href="@{/credential/delete(id=${credential.credentialid})}" class="btn btn-danger">Delete</a>
                                     </td>
                                     <th scope="row" th:text="${credential.url}"></th>
-                                    <td th:text="${credential.username}"></td>
+                                    <td class="credential-username-row" th:text="${credential.username}"></td>
                                     <td th:text="${credential.password}"></td>
                                 </tr>
                                 </tbody>
@@ -177,7 +177,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
+                                        <button type="button" id="saveCredentialButton" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
                                     </div>
                                 </div>
                             </div>
