--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -137,7 +137,7 @@
                                 <tbody>
                                 <tr th:each="credential : ${credentials}">
                                     <td>
-                                        <button type="button" th:onclick="javascript:showCredentialModal( [[${credential.credentialid}]], [[${credential.url}]], [[${credential.username}]], [[${credential.password}]] )" class="btn btn-success">Edit</button>
+                                        <button type="button" th:onclick="javascript:showCredentialModal( [[${credential}]] )" class="btn btn-success">Edit</button>
                                         <a th:href="@{/credential/delete(id=${credential.credentialid})}" class="btn btn-danger">Delete</a>
                                     </td>
                                     <th scope="row" th:text="${credential.url}"></th>
@@ -202,11 +202,11 @@
             }
 
             // For opening the credentials modal
-            function showCredentialModal(credentialId, url, username, password) {
-                $('#credential-id').val(credentialId ? credentialId : '');
-                $('#credential-url').val(url ? url : '');
-                $('#credential-username').val(username ? username : '');
-                $('#credential-password').val(password ? password : '');
+            function showCredentialModal(credential) {
+                $('#credential-id').val(credential && credential.credentialid ? credential.credentialid : '');
+                $('#credential-url').val(credential && credential.url ? credential.url : '');
+                $('#credential-username').val(credential && credential.username ? credential.username : '');
+                $('#credential-password').val(credential && credential.password ? credential.password : '');
                 $('#credentialModal').modal('show');
             }
         </script>
