--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -51,8 +51,7 @@
                                 <tbody>
                                 <tr th:each="file : ${files}">
                                     <td>
-<!--                                        <a target="_blank" class="btn btn-success">View</a>-->
-<!--                                        <a th:href="${file.bytes}" th:download="${file.filename}" class="btn btn-success">View</a>-->
+                                        <a th:href="${fileService.getFileData(file.fileid)}" th:download="${file.filename}" class="btn btn-success">Download</a>
                                         <a  th:href="@{/file/delete(id=${file.fileid})}"  class="btn btn-danger">Delete</a>
                                     </td>
                                     <th scope="row" th:text="${file.filename}"></th>
@@ -137,7 +136,7 @@
                                 <tbody>
                                 <tr th:each="credential : ${credentials}">
                                     <td>
-                                        <button type="button" th:onclick="javascript:showCredentialModal( [[${credential}]] )" class="btn btn-success">Edit</button>
+                                        <button type="button" th:onclick="javascript:showCredentialModal( [[${credential.credentialid}]], [[${credential.url}]], [[${credential.username}]], [[${encryptionService.decryptValue(credential.password, credential.key)}]] )" class="btn btn-success">Edit</button>
                                         <a th:href="@{/credential/delete(id=${credential.credentialid})}" class="btn btn-danger">Delete</a>
                                     </td>
                                     <th scope="row" th:text="${credential.url}"></th>
@@ -202,11 +201,11 @@
             }
 
             // For opening the credentials modal
-            function showCredentialModal(credential) {
-                $('#credential-id').val(credential && credential.credentialid ? credential.credentialid : '');
-                $('#credential-url').val(credential && credential.url ? credential.url : '');
-                $('#credential-username').val(credential && credential.username ? credential.username : '');
-                $('#credential-password').val(credential && credential.password ? credential.password : '');
+            function showCredentialModal(credentialid, url, username, password) {
+                $('#credential-id').val(credentialid && credentialid ? credentialid : '');
+                $('#credential-url').val(url && url ? url : '');
+                $('#credential-username').val(username && username ? username : '');
+                $('#credential-password').val(password && password ? password : '');
                 $('#credentialModal').modal('show');
             }
         </script>
