--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -136,7 +136,7 @@
                                 <tbody>
                                 <tr th:each="credential : ${credentials}">
                                     <td>
-                                        <button type="button" th:onclick="javascript:showCredentialModal( [[${credential.credentialid}]], [[${credential.url}]], [[${credential.username}]], [[${encryptionService.decryptValue(credential.password, credential.key)}]] )" class="btn btn-success">Edit</button>
+                                        <button type="button" th:onclick="javascript:showCredentialModal( [[${credential.credentialid}]], [[${credential.url}]], [[${credential.username}]], [[${encryptionService.decryptValue(credential.password, credential.key)}]] )" class="btn btn-success edit-cred">Edit</button>
                                         <a th:href="@{/credential/delete(id=${credential.credentialid})}" class="btn btn-danger">Delete</a>
                                     </td>
                                     <th scope="row" th:text="${credential.url}"></th>
